Affected Issue(s): Minor fix on heading
What this commit has achieved:
1. Fixed heading value to "Setup Keycloak for OpenSRP v2.0+ Apps"

--- a/docs/engineering/keycloak/post-deploy-setup/readme.mdx
+++ b/docs/engineering/keycloak/post-deploy-setup/readme.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 2
 ---
 
-# Getting started for platform developers
+# Setup Keycloak for OpenSRP v2.0+ Apps
 
 - Navigate to the Keycloak Admin UI, e.g [keycloak:8080](http://keycloak:8080)
 - Create realm with name `fhir` or anything else
