remove oauth secret configuration requirement

--- a/docs/engineering/android-app/getting-started/readme.mdx
+++ b/docs/engineering/android-app/getting-started/readme.mdx
@@ -16,10 +16,9 @@ Begin by cloning this repository. Ensure you have JAVA 11 installed, and setup A
 Update `local.properties` file by providing the required Keycloak credentials to enable syncing of data to and from the HAPI FHIR server:
 
 ```
-#oauth credentials
+#oauth configurations
 OAUTH_BASE_URL=https://keycloak-stage.smartregister.org/auth/realms/FHIR_Android/
 OAUTH_CLIENT_ID="provide client id"
-OAUTH_CLIENT_SECRET="provide client secret"
 OAUTH_SCOPE=openid
 
 #fhir store base url
@@ -29,6 +28,8 @@ FHIR_BASE_URL=https://fhir.labs.smartregister.org/fhir/
 SENTRY_DSN=<https://your/sentry/project/dsn>
 
 ```
+
+**Note:** It is required to configure your OAuth client as **public** hence there's no need for a _OAuth client secret_.
 
 #### Gateway vs Non Gateway backend
 The codebase supports building a release that uses the [FHIR Gateway backend](https://github.com/opensrp/fhir-gateway) and one that doesn't. The **proxy** mode is the _default_ but if your backend is not using the [FHIR Gateway](https://github.com/opensrp/fhir-gateway/releases) you need to specify this by switching to the correct build type variant. To switch between the two one needs to change to a variant with the `debugNonProxy` build type. e.g for the flavor `opensrp` select the variant `opensrpDebugNonProxy`
