Uprade gradle dependencies
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -153,4 +153,6 @@
     <string name="all_data_synced">All data synced</string>
     <string name="invalid_offline_login_state">User set up required. Enable your internet connection </string>
     <string name="select_month">Select Month</string>
+    <string name="ok">OK</string>
+    <string name="add">ADD</string>
 </resources>
