--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="clear_all">Clear All</string>
     <string name="required_permission_title">Permission required!</string>
     <string name="required_permission_message">Below permissions are required to be allowed to use this app.\n\n %s \n</string>
+    <string name="default_notification_channel_id">quest_notification_channel_id</string>
 
 
 
